[build-system]
requires = ["pbr>=5.7.0", "setuptools>=64.0.0", "wheel"]
build-backend = "pbr.build"

[tool.mypy]
incremental = true
pretty = true
show_error_context = true
show_column_numbers = true
warn_unused_ignores = true
# remove gradually as progress is made
disable_error_code = "import-untyped,var-annotated,import-not-found"
# honor excludes by not following there through imports
follow_imports = "silent"
files = "neutron_lib"
