[metadata]
name = neutron-lib
summary = Neutron shared routines and utilities
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/neutron-lib/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    neutron_lib

[entry_points]
oslo.policy.enforcer =
    neutron_lib = neutron_lib._policy:get_enforcer
oslo.policy.policies =
    neutron_lib = neutron_lib._policy:list_rules

[compile_catalog]
directory = neutron_lib/locale
domain = neutron_lib

[update_catalog]
domain = neutron_lib
output_dir = neutron_lib/locale
input_file = neutron_lib/locale/neutron_lib.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = neutron_lib/locale/neutron_lib.pot

[wheel]
universal = 1
