[metadata]
name = neutron-lib
summary = Neutron shared routines and utilities
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/neutron-lib/latest/
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    neutron_lib

[entry_points]
oslo.policy.enforcer =
    neutron_lib = neutron_lib._policy:get_enforcer
oslo.policy.policies =
    neutron_lib = neutron_lib._policy:list_rules
