[metadata]
name = neutron-lib
summary = Neutron shared routines and utilities
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/neutron-lib/latest/
python_requires = >=3.9
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    neutron_lib

[entry_points]
oslo.policy.enforcer =
    neutron_lib = neutron_lib._policy:get_enforcer
oslo.policy.policies =
    neutron_lib = neutron_lib._policy:list_rules
flake8.extension =
    N521 = neutron_lib.hacking.checks:use_jsonutils
    N524 = neutron_lib.hacking.checks:check_no_contextlib_nested
    N529 = neutron_lib.hacking.checks:no_mutable_default_args
    N530 = neutron_lib.hacking.checks:check_neutron_namespace_imports
    N532 = neutron_lib.hacking.translation_checks:check_log_warn_deprecated
    N534 = neutron_lib.hacking.translation_checks:check_raised_localized_exceptions
    N536 = neutron_lib.hacking.checks:assert_equal_none
    N537 = neutron_lib.hacking.translation_checks:no_translate_logs
    N535 = neutron_lib.hacking.checks:check_no_eventlet_imports
